feat: Add mike as a version provider
In order to support deviations and differences between multiple Cleura
Cloud regions, add version support via mike.

Define "main" as the default version, and update the build framework
so that we can treat each branch as a separate version.

Mike also requires that the user.name and user.email Git config
variables are set, in order for it to create its commit to
gh-pages. We can either set this with the "git config", or by using
the GIT_COMMITTER_NAME and GIT_COMMITTER_EMAIL environment variables
as defined by the CI configuration. The latter is the more flexible
option, so add GIT_* to the passenv list for the "mike" testenv.

References:
https://squidfunk.github.io/mkdocs-material/setup/setting-up-versioning/
https://github.com/jimporter/mike

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,9 @@ extra:
   support: "Service Center"
   support_domain: "servicecenter.cleura.cloud"
   support_email: "support@cleura.com"
+  version:
+    default: "main"
+    provider: mike
 extra_css:
   - assets/stylesheets/cleura-palette.css
 markdown_extensions:
@@ -73,6 +76,10 @@ plugins:
       # yamllint disable-line rule:truthy
       on_error_fail: !ENV [DOCS_FAIL_ON_MACRO_ERROR, True]
       on_undefined: strict
+  - mike:
+      alias_type: symlink
+      canonical_version: main
+      version_selector: true
   - search
   - social:
       # yamllint disable-line rule:truthy
