--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
   mkdocs-macros-plugin
   mkdocs-material>=9.5.3
   mkdocs-redirects
+  mike
   pillow
   cairosvg
 commands =
@@ -27,6 +28,14 @@ setenv =
   DOCS_SITE_URL = http://localhost:8000
 commands =
   mkdocs serve {posargs}
+
+[testenv:mike]
+passenv =
+  {[testenv]passenv}
+  CI_*
+  GIT_*
+commands =
+  {toxinidir}/scripts/mike.sh {posargs}
 
 [testenv:build]
 commands =
@@ -66,7 +75,7 @@ envdir = {toxworkdir}/bashate
 deps =
   bashate
 commands =
-  bashate {toxinidir}/scripts/from-markdown.sh {toxinidir}/.githooks/pre-commit {toxinidir}/.githooks/post-commit {toxinidir}/.githooks/pre-push
+  bashate {toxinidir}/scripts/from-markdown.sh {toxinidir}/scripts/mike.sh {toxinidir}/.githooks/pre-commit {toxinidir}/.githooks/post-commit {toxinidir}/.githooks/pre-push
 
 [testenv:to-odt]
 envdir = {toxworkdir}/pandoc
