--- a/tox.ini
+++ b/tox.ini
@@ -60,8 +60,7 @@ passenv =
   {[testenv]passenv}
   GITHUB_*
 commands =
-  {[testenv:build]commands}
-  mkdocs gh-deploy {posargs}
+  {toxinidir}/scripts/mike.sh {posargs}
 
 [testenv:deploy-gitlab]
 passenv =
